@@ -48,14 +48,14 @@ if test -z "$CFLAGS"; then
    CFLAGS="-O2"
 fi
 
-# programs
-AC_DISABLE_STATIC
-AM_PROG_LIBTOOL
-DOLT
-AC_PROG_INSTALL
 AM_PROG_CC_STDC
-AC_PROG_CXX
 AM_PROG_CC_C_O
+AC_PROG_CXX
+AC_PROG_INSTALL
+AC_DISABLE_STATIC
+AC_LIBTOOL_WIN32_DLL
+AC_PROG_LIBTOOL
+DOLT
 
 # check for -fvisibility=hidden compiler support (GCC >= 4)
 saved_CFLAGS="$CFLAGS"
